# xmem

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/closeouts/: 2026-05-24-xmem-v0.1-closeout.md
docs/context/: agent-resume-2026-05-24.md  agent-resume-2026-05-25.md
docs/policies/: agent-output-compactness.md  layered-symbolic-memory.md  preflight-severity.md  promotion-policy.md  truth-level.md
docs/updates/: 2026-05-24-xmem-public-onboarding.md  2026-05-25-copy-domain-resolution-memory.md  2026-05-25-coscli-isolated-env-memory.md  2026-05-25-scmp-branch-deploy-tag.md  2026-05-25-xmem-gateway.md  2026-05-25-xmem-resume.md
examples/cards/: ads.add.yaml  ads.lazyload.yaml  alias.webnovel-template-1.yaml  xmem.control-plane.yaml  xmem.installation.yaml  xmem.layered-symbolic-memory.yaml
examples/cards/policy/: xmem.agent-output-compactness-policy.yaml  xmem.preflight-severity-policy.yaml  xmem.promotion-policy.yaml  xmem.truth-level-policy.yaml
examples/cards/scmp/: copy-domain-resolve-by-sibling-template.yaml  coscli-isolated-home.yaml  crypto-template1-adx-copy-domain.yaml  deploy-tag-empty-for-branch.yaml  webnovel1-domain-group.yaml  webnovel1-traffic-switch.yaml  webnovel2-domain-group.yaml  (+1 more)
examples/generic-cards/: xmem.local-owner-model.yaml
skills/xmem/: SKILL.md
tests/: smoke.py  test_v01.py
xmem/: __init__.py  checks.py  cli.py  code_index.py  context.py  gain.py  gateway.py  health.py  hooks.py  importers.py  preflight.py  project.py  resume.py  search.py  setup.py  source_check.py  sources.py  store.py  toon.py  util.py
(+68 files in other folders)
