[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xmem"
version = "0.1.28"
description = "Lightweight cross-project truth index for agents"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "CtriXin"}]

[project.scripts]
xmem = "xmem.cli:main"

[tool.setuptools]
packages = ["xmem"]
